# app/Models/QuestionAnswer.php
@@ -8,9 +8,19 @@ class QuestionAnswer extends Model
 {
 
     protected $fillable = [
-        'answer_id',
-        'question_id',
+        'answer_uuid',
+        'question_uuid',
         'user_id',
-        'file'
+        'files'
     ];
+
+    public function question()
+    {
+        return $this->belongsTo(Question::class, 'question_uuid', 'uuid');
+    }
+
+    public function answer()
+    {
+        return $this->belongsTo(Answer::class, 'answer_uuid', 'uuid');
+    }
 }
